--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,28 @@
   text-align: center;
 }
 
+.row{
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  --bs-gutter-x: 0;
+}
+
+.col{
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  --bs-gutter-x: 0px;
+  /* line-height:0px; */
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
