--- a/src/productPage/compereWithPage/compereWithPage.scss
+++ b/src/productPage/compereWithPage/compereWithPage.scss
@@ -12,13 +12,13 @@
 
     float: left;
 
-    border-left: gray 2px solid;
-    border-right: gray 2px solid;
+    border-left: gray 4px solid;
+    // border-right: gray 2px solid;
     // display: inline-block;
     // float: left;
     background-color: red;
 }
-
+ 
 .compereWithPage {
     &-body {
         position: relative;
