--- a/src/catalog/catalog.scss
+++ b/src/catalog/catalog.scss
@@ -2,10 +2,13 @@
     &-body{
         position: relative;
         background-color: whitesmoke;
+        // height: auto;
         height: 700px;
+        // max-height: 700px;
         width: 100%;
         overflow: hidden;
         transition: height 2s;
+        // transition: max-height 2s;
     }&-filter{
         position: relative;
         width: 100%;
