--- a/src/mainPage/LiteItems/lineItems.css
+++ b/src/mainPage/LiteItems/lineItems.css
@@ -4,10 +4,28 @@
   background-color: #181818;
 }
 
+.lineItems-itemsCon {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+
 .lineItems-item {
   position: relative;
+  margin-left: 40px;
+  margin-right: 40px;
   height: 70px;
-  width: 120px;
+  width: 140px;
   background-color: whitesmoke;
 }
 /*# sourceMappingURL=lineItems.css.map */
