--- a/src/basket/basket.scss
+++ b/src/basket/basket.scss
@@ -9,6 +9,40 @@
         width: 100%;
         height: auto;
         background-color: rgb(68, 68, 68);
+    }&-row{
+        height: 240px;
+    }&-payButCon{
+        position: relative;
+        height: 100%;
+        width: 100%;
+        background-color: whitesmoke;
+    }
+    &-payBut{
+        position: relative;
+        height: 100%;
+        width: 100%;
+        background-color: seashell;
+    }
+    &-inputCon {
+        position: relative;
+        height: 50%;
+        width: 70%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        &-name {
+            position: relative;
+            height: 25%;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        &-input {
+            position: relative;
+            height: 75%;
+            width: 100%;
+        }
     }
     &-item {
         position: relative;
