--- a/src/catalog/catalog.css
+++ b/src/catalog/catalog.css
@@ -27,4 +27,40 @@
   background-color: whitesmoke;
   border: 2px gray solid;
 }
+
+.catalog-item-img {
+  position: relative;
+  width: 100%;
+  height: 50%;
+}
+
+.catalog-item-name {
+  position: relative;
+  width: 100%;
+  height: 20%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.catalog-item-price {
+  position: relative;
+  width: 100%;
+  height: 30%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 /*# sourceMappingURL=catalog.css.map */
