--- a/src/basket/popUpFit/popUpFit.scss
+++ b/src/basket/popUpFit/popUpFit.scss
@@ -32,7 +32,26 @@
             transform: translate(-50%, -50%);
             height: 240px;
             width: 100%;
-            background-color: whitesmoke;            
+            background-color: whitesmoke;
+            &-imgCon{
+                top: 0px;
+                position: absolute;
+                width: 40%;
+                height: 100%;
+            }
+            &-img{
+                top: 0px;
+                position: absolute;
+                height: 100%;
+                width: 100%;
+            }&-name{
+                top: 0px;
+                left: 40%;
+                position: absolute;
+                width: 60%;
+                height: 60%;
+                font-size: 24px;
+        }          
         }
     }&-motherboard{
         &-body{
@@ -41,6 +60,24 @@
             width: 100%;
             background-color: whitesmoke;
             display: block;
+            &-imgCon{
+                top: 0px;
+                position: absolute;
+                width: 40%;
+                height: 100%;
+            }
+            &-img{
+                top: 0px;
+                height: 100%;
+                width: 100%;
+            }&-name{
+                top: 0px;
+                left: 40%;
+                position: absolute;
+                width: 60%;
+                height: 60%;
+                font-size: 24px;
+        }  
         }
         &-col{
             height: 100%;
