--- a/src/catalog/catalog.css
+++ b/src/catalog/catalog.css
@@ -3,18 +3,60 @@
   background-color: whitesmoke;
   height: 700px;
   width: 100%;
-  overflow: hidden;
+  overflow-y: scroll;
   -webkit-transition: height 2s;
   transition: height 2s;
+}
+
+.catalog-itemCon {
+  position: relative;
+  height: 700px;
+  width: 100%;
+  overflow-y: scroll;
+}
+
+.catalog-filterBunCon {
+  position: relative;
+  height: 700px;
+  width: 100%;
+  overflow-y: scroll;
 }
 
 .catalog-filter {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: auto;
   background-color: #3f3f3f;
   -webkit-transition: height 2s;
   transition: height 2s;
+}
+
+.catalog-filter-title {
+  position: relative;
+  height: 60px;
+  width: 100%;
+  background-color: gray;
+}
+
+.catalog-filter-but {
+  position: relative;
+  border-top: 1px solid #5f5f5f;
+  border-bottom: 1px solid #5f5f5f;
+  height: 40px;
+  width: 100%;
+  z-index: 4;
+  background-color: #9b9b9b;
+}
+
+.catalog-filter-but-del {
+  position: absolute;
+  top: 0px;
+  z-index: 5;
+  left: 90%;
+  width: 10%;
+  height: 100%;
+  background-color: #c20000;
+  border: 1px solid #700000;
 }
 
 .catalog-item {
