--- a/src/catalog/catalog.scss
+++ b/src/catalog/catalog.scss
@@ -2,20 +2,55 @@
     &-body {
         position: relative;
         background-color: whitesmoke;
-        // height: auto;
         height: 700px;
-        // max-height: 700px;
+        // height: auto;
         width: 100%;
-        overflow: hidden;
+        overflow-y: scroll;
         transition: height 2s;
-        // transition: max-height 2s;
+    }
+    &-itemCon{
+        position: relative;
+        height: 700px;
+        width: 100%;
+        overflow-y: scroll;
+    }&-filterBunCon{
+        position: relative;
+        height: 700px;
+        width: 100%;
+        overflow-y: scroll;
     }
     &-filter {
         position: relative;
         width: 100%;
-        height: 100%;
+        // height: 700px;
+        height: auto;
+        // overflow-y: scroll;
         background-color: rgb(63, 63, 63);
         transition: height 2s;
+        &-title{
+            position: relative;
+            height: 60px;
+            width: 100%;
+            background-color: gray;
+        }&-but{
+            position: relative;
+            border-top: 1px solid rgb(95, 95, 95);
+            border-bottom: 1px solid rgb(95, 95, 95);
+            height: 40px;
+            width: 100%;
+            z-index: 4;
+            background-color: rgb(155, 155, 155);
+            &-del{
+                position: absolute;
+                top: 0px;
+                z-index: 5;
+                left: 90%;
+                width: 10%;
+                height: 100%;
+                background-color: rgb(194, 0, 0);
+                border: 1px solid rgb(112, 0, 0);
+            }
+        }
     }
     &-item {
         position: relative;
