--- a/src/productPage/productPage.css
+++ b/src/productPage/productPage.css
@@ -105,15 +105,34 @@
   background-color: gray;
 }
 
-.compareWith {
+.charBigCont {
   position: relative;
   margin-top: 220px;
-  height: 110px;
+  height: auto;
   width: 100%;
   background-color: gray;
 }
 
-.compareWith-button {
+.charBigCont-charCont {
+  position: relative;
+  height: 20px;
+  width: 260px;
+}
+
+.charBigCont-char {
+  position: relative;
+  float: left;
+  width: 100px;
+}
+
+.charBigCont-name {
+  position: relative;
+  float: left;
+  left: 0px;
+  width: 160px;
+}
+
+.charBigCont-button {
   position: relative;
   height: 100%;
   width: 100%;
