--- a/src/productPage/productPage.scss
+++ b/src/productPage/productPage.scss
@@ -97,13 +97,28 @@
     }
 }
 
-.compareWith {
+.charBigCont {
     position: relative;
     // margin-top: 380px;
     margin-top: 220px;
-    height: 110px;
+    // height: 110px;
+    height: auto;
     width: 100%;
     background-color: gray;
+    &-charCont{
+        position: relative;
+        height: 20px;
+        width: 260px;
+    }&-char{
+        position: relative;
+        float: left;
+        width: 100px;
+    }&-name{
+        position: relative;
+        float: left;
+        left: 0px;
+        width: 160px;
+    }
     &-button {
         position: relative;
         height: 100%;
